--- a/config/database.yml
+++ b/config/database.yml
@@ -32,7 +32,8 @@ production:
   <<: *default
   adapter: mysql2
   encoding: utf8
-  database: <%= ENV['DB_DATABASE'] %>
+  database: db/development.sqlite3
+  #<%= ENV['DB_DATABASE'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
