--- a/config/database.yml
+++ b/config/database.yml
@@ -11,14 +11,15 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: [riceday]_development
+  #db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/development.sqlite3
+  database: [riceday]_test
   #<%= ENV['DB_DATABASE'] %>
   adapter: mysql2
   encoding: utf8mb4
@@ -32,7 +33,7 @@ production:
   <<: *default
   adapter: mysql2
   encoding: utf8
-  database: db/development.sqlite3
+  database: [riceday]_production
   #<%= ENV['DB_DATABASE'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV['DB_USERNAME'] %>
