--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@ default: &default
 
 development:
   <<: *default
-  database: [riceday]_development
+  database: riceday_development
   #db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
@@ -19,7 +19,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: [riceday]_test
+  database: riceday_test
   #<%= ENV['DB_DATABASE'] %>
   adapter: mysql2
   encoding: utf8mb4
@@ -33,7 +33,7 @@ production:
   <<: *default
   adapter: mysql2
   encoding: utf8
-  database: [riceday]_production
+  database: riceday_production
   #<%= ENV['DB_DATABASE'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV['DB_USERNAME'] %>
