--- a/config/database.yml
+++ b/config/database.yml
@@ -33,7 +33,7 @@ production:
   <<: *default
   adapter: mysql2
   encoding: utf8
-  database: riceday_production
+  database: riceday
   #<%= ENV['DB_DATABASE'] %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: <%= ENV['DB_USERNAME'] %>
