--- a/config/database.yml
+++ b/config/database.yml
@@ -11,16 +11,14 @@ default: &default
 
 development:
   <<: *default
-  database: riceday_development
-  #db/development.sqlite3
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: riceday_test
-  #<%= ENV['DB_DATABASE'] %>
+  database: <%= ENV['DB_DATABASE'] %>
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
@@ -31,11 +29,11 @@ test:
 
 production:
   <<: *default
+  database: <%= ENV['DB_DATABASE'] %>
   adapter: mysql2
-  encoding: utf8
-  database: riceday
-  #<%= ENV['DB_DATABASE'] %>
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
+  host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
   password: <%= ENV['DB_PASSWORD'] %>
-  host: <%= ENV['DB_HOST'] %>
