--- a/config/database.yml
+++ b/config/database.yml
@@ -29,7 +29,7 @@ test:
 
 production:
   <<: *default
-  database: <%= ENV['DB_DATABASE'] %>
+  database: <%= ENV['ricedaydb'] %>
   adapter: mysql2
   encoding: utf8mb4
   charset: utf8mb4
